--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -5,6 +5,8 @@ on:
 
 env:
   NX_BRANCH: ${{ github.event.client_payload.number || github.event.client_payload.ref }}
+  HOMEBREW_NO_AUTO_UPDATE: 1
+  HOMEBREW_NO_INSTALL_CLEANUP: 1
 jobs:
   unit-tests-and-lint:
     name: Unit tests and lint
@@ -44,3 +46,68 @@ jobs:
 
       - name: Test
         run: npx nx run-many --target=test
+  ios-e2e:
+    name: iOS E2E tests
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.CI_GITHUB_TOKEN }}
+          fetch-depth: 0
+          repository: ${{ secrets.REPOSITORY }}
+          ref: ${{ github.event.client_payload.github.ref }}
+
+      - name: Set Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+
+      - name: Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: Install macOS dependencies
+        run: |
+          brew tap wix/brew
+          brew install applesimutils
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
+
+      - uses: actions/cache@v3
+        id: npm-cache
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npx nx test-ios mobile-e2e
+
+      - name: Upload built app
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mone.app
+          path: apps/mobile/dist/Mone.app
+
+      - name: Upload detox artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: .detox-artifacts
+          path: apps/mobile/.detox-artifacts
