ci: install fastlane

--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           brew tap wix/brew
           brew install applesimutils
+          brew install fastlane
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
