--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -82,8 +82,14 @@ jobs:
           bundler-cache: true
           ruby-version: 3.2
 
+      - name: Setup xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
       - name: Create simulator
         run: |
+          xcodebuild -version
           xcrun simctl list runtimes
           xcrun simctl create "iPhone 15" "com.apple.CoreSimulator.SimRuntime.iOS-17-0"
           xcrun simctl list devices
