--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -82,17 +82,10 @@ jobs:
           bundler-cache: true
           ruby-version: 3.2
 
-      - name: Setup xcode
-        uses: maxim-lobanov/setup-xcode@v1
+      - name: Start iPhone
+        uses: futureware-tech/simulator-action@v3
         with:
-          xcode-version: 15.0.1
-
-      - name: Create simulator
-        run: |
-          xcodebuild -version
-          xcrun simctl list runtimes
-          xcrun simctl create "iPhone 15" "com.apple.CoreSimulator.SimRuntime.iOS-17-0"
-          xcrun simctl list devices
+          model: 'iPhone 14'
 
       - name: Get npm cache directory
         id: npm-cache-dir
