--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -103,8 +103,15 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
+      - name: Build app
+        run: npx nx build-ios mobile-e2e
+
+      - name: Unpack app
+        run: tar -xf Mon-e.tar.gz - && mv Payload/Mone.app ./
+        working-directory: apps/mobile/dist
+
       - name: Run tests
-        run: npx nx test-ios mobile-e2e
+        run: npx nx test-ios mobile-e2e --reuse
 
       - name: Upload built app
         if: always()
