--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -20,6 +20,7 @@ jobs:
           authToken: ${{ secrets.CI_GITHUB_TOKEN }}
           context: 'Unit tests and lint'
           description: 'Pending'
+          repository: ${{ secrets.REPOSITORY }}
           state: 'pending'
           sha: ${{ env.COMMIT_SHA }}
       - uses: actions/checkout@v3
@@ -64,6 +65,7 @@ jobs:
           context: 'Unit tests and lint'
           description: 'Failure'
           state: 'failure'
+          repository: ${{ secrets.REPOSITORY }}
           sha: ${{ env.COMMIT_SHA }}
 
       - name: Set status
@@ -73,6 +75,7 @@ jobs:
           authToken: ${{ secrets.CI_GITHUB_TOKEN }}
           context: 'Unit tests and lint'
           description: 'Success'
+          repository: ${{ secrets.REPOSITORY }}
           state: 'success'
           sha: ${{ env.COMMIT_SHA }}
   ios-e2e:
@@ -85,6 +88,7 @@ jobs:
         with:
           authToken: ${{ secrets.CI_GITHUB_TOKEN }}
           context: 'iOS E2E tests'
+          repository: ${{ secrets.REPOSITORY }}
           description: 'Pending'
           state: 'pending'
           sha: ${{ env.COMMIT_SHA }}
@@ -164,6 +168,7 @@ jobs:
           authToken: ${{ secrets.CI_GITHUB_TOKEN }}
           context: 'iOS E2E tests'
           description: 'Failure'
+          repository: ${{ secrets.REPOSITORY }}
           state: 'failure'
           sha: ${{ env.COMMIT_SHA }}
 
@@ -172,6 +177,7 @@ jobs:
         if: success()
         with:
           authToken: ${{ secrets.CI_GITHUB_TOKEN }}
+          repository: ${{ secrets.REPOSITORY }}
           context: 'iOS E2E tests'
           description: 'Success'
           state: 'success'
