--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -226,6 +226,10 @@ jobs:
           bundler-cache: true
           ruby-version: 3.2
 
+      - name: Install macOS dependencies
+        run: |
+          brew install fastlane
+
       - name: Get npm cache directory
         id: npm-cache-dir
         run: |
