--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,13 +96,13 @@ jobs:
           server_port: 465
           secure: true
           # Required mail subject:
-          subject: Mone iOS Preview Build
+          subject: Mone iOS Preview Build ${{matrix.profile}}
           # Required recipients' addresses:
           to: przemyslawzydek@gmail.com
           # Required sender full name (address can be skipped):
           from: GitHub # <user@example.com>
           # Optional plain body:
-          body: 'Build job of ${{github.repository}} completed successfully! Artifacts link: ${{env.URL}}'
+          body: 'Build job of ${{github.repository}} for ${{matrix.profile}} ${{ completed successfully! Artifacts link: ${{env.URL}}'
           # Optional unsigned/invalid certificates allowance:
           ignore_cert: true
           # Optional converting Markdown to HTML (set content_type to text/html too):
