--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
           # Required sender full name (address can be skipped):
           from: GitHub # <user@example.com>
           # Optional plain body:
-          body: 'Build job of ${{github.repository}} for ${{matrix.profile}} ${{ completed successfully! Artifacts link: ${{env.URL}}'
+          body: 'Build job of ${{github.repository}} for ${{matrix.profile}} completed successfully! Artifacts link: ${{env.URL}}'
           # Optional unsigned/invalid certificates allowance:
           ignore_cert: true
           # Optional converting Markdown to HTML (set content_type to text/html too):
