--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         profile: [preview, preview-simulator, development, development-simulator]
     name: Preview iOS Build
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - name: Set status
