--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
         name: Install pnpm
         with:
           run_install: false
+          version: 8
 
       - name: Get pnpm store directory
         shell: bash
