--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -42,6 +42,7 @@ jobs:
         name: Install pnpm
         with:
           run_install: false
+          version: 8
 
       - name: Get pnpm store directory
         shell: bash
@@ -143,6 +144,7 @@ jobs:
         name: Install pnpm
         with:
           run_install: false
+          version: 3
 
       - name: Get pnpm store directory
         shell: bash
