--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,6 +71,13 @@ jobs:
         run: |
           brew install fastlane
 
+      - name: Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
+          packager: pnpm
+
       - name: Install dependencies
         run: pnpm install
 
