--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: Mone.${{matrix.profile}}.ipa
-          path: apps/mobile/dist/Mone.ipa
+          path: dist/Mone.ipa
 
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
@@ -103,7 +103,7 @@ jobs:
           server_address: smtp.gmail.com
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          attachments: apps/mobile/dist/Mone.ipa
+          attachments: dist/Mone.ipa
           # Server port, default 25:
           server_port: 465
           secure: true
